--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "animexstream",
-  "private": true,
+  "name": "animextream",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"vite\" \"npx tailwindcss -i ./src/tailwind/input.css -o ./src/tailwind/output.css --watch\"",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -28,6 +30,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
