--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "dev": "concurrently \"vite\" \"npx tailwindcss -i ./src/tailwind/input.css -o ./src/tailwind/output.css --watch\"",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^1.7.9",
